# nam-vst3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: NAMController.h  NAMFileParser.h  NAMParameters.h  NAMProcessor.h  NAMUIDs.h  NAMWaveNet.h
resources/: Info.plist
src/: NAMController.cpp  NAMFileParser.cpp  NAMParameters.cpp  NAMProcessor.cpp  NAMWaveNet.cpp  plugentry.cpp
